--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -31,6 +31,23 @@ block contenido
                     =propiedad.precio.nombre
 
                   //- p(class="text-sm text-black font-bold")=propiedad.precio.nombre
-                div(class="sm:w-1/4 md:w-2/6 lg:w-1/6")
+                div(class="sm:w-1/4 md:w-2/6 lg:flex-1 flex flex-col gap-2 lg:flex-row")
+                  form(action="" method="")
+                    input(
+                      type="submit" 
+                      name="" 
+                      class=`w-full px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer ${propiedad.publicado ? 'bg-green-100 text-green-800' : 'bg-yellow-100 text-yellow-800'}` 
+                      value=`${propiedad.publicado ? 'Publicado' : 'No Publicado'}`
+                    )
+                  
+                  a(href="" class="px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer bg-indigo-100 text-indigo-800 text-center") Editar
+
+                  form(action="" method="")
+                    input(
+                      type="submit" 
+                      name="" 
+                      class="w-full px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer bg-red-100 text-red-800"
+                      value="Eliminar"
+                    )
     else
       p.text-cemter No hay propiedades aún...
