--- a/views/propiedades/mostrar.pug
+++ b/views/propiedades/mostrar.pug
@@ -1,5 +1,10 @@
 extends ../layout/app
 
+block styles
+  link(rel="stylesheet", href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css")
+  //- Esri Leaflet Geocoder: permite buscar direcciones
+  link(rel="stylesheet", href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css") 
+
 block contenido
 
   //- h1 Mostrando Propiedad
@@ -43,4 +48,8 @@ block contenido
 
         div(class="p-5")
           p(class="text-gray-600 font-bold text-xs") Dirección
-            span(class="text-gray-800 block text-lg")= propiedad.calle
+            span(id="calle" class="text-gray-800 block text-lg")= propiedad.calle
+
+block scripts
+  script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
+  script(src="/js/mostrarMapa.js")
