--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -51,5 +51,15 @@ block contenido
                       class="w-full px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer bg-red-100 text-red-800"
                       value="Eliminar"
                     )
+      div(class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6 mt-10")
+        div
+          nav(class="relative z-0 inline-flex rounded-sm shadow-md")
+            - var n = 1;
+            while n <= paginas
+              if pagina == n
+                span(class="bg-indigo-50 border-indigo-500 text-indigo-700 relative inline-flex items-center px-4 py-2 border text-sm font-medium")= n
+              else
+                a(href=`?pagina=${n}` class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex items-center px-4 py-2 border text-sm font-medium")= n
+              - n++;
     else
       p.text-cemter No hay propiedades aún...
