--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -30,6 +30,11 @@ block contenido
     //- Quiere decir que usará toda la altura y agregará 600px
     div(id="mapa-inicio" class="h-[600px] mt-5")
 
+    section(class="py-5")
+      h2(class="text-center text-4xl font-extrabold pt-10") Casas en Venta
+
+      pre= JSON.stringify(casas, null, 2)
+
 block scripts
   script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
   script(src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js")
