--- a/views/layout/includes/header-app.pug
+++ b/views/layout/includes/header-app.pug
@@ -1,7 +1,8 @@
 header.bg-indigo-600.p-4
   .container-mx-auto.flex.justify-between.items-center
-    h1.text-2xl.text-white.font-extrabold.text-center Bienes
-      span.font-normal Raíces
+    a(href="/")
+      h1.text-2xl.text-white.font-extrabold.text-center Bienes
+        span.font-normal Raíces
     
     nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden")
       a(href="/auth/registro" class="") Crear Cuenta
@@ -11,6 +12,6 @@ div(class="bg-indigo-700 py-5 hidden lg:block")
   div(class="container mx-auto flex justify-between")
     a(href="/categorias/1", class="text-sm text-white uppercase font-bold") Casas
     a(href="/categorias/2", class="text-sm text-white uppercase font-bold") Departamentos
-    a(href="/categorias/3", class="text-sm text-white uppercase font-bold") Bodegas
-    a(href="/categorias/4", class="text-sm text-white uppercase font-bold") Terrenos
+    a(href="/categorias/3", class="text-sm text-white uppercase font-bold") Terrenos
+    a(href="/categorias/4", class="text-sm text-white uppercase font-bold") Bodegas
     a(href="/categorias/5", class="text-sm text-white uppercase font-bold") Cabañanas
