--- a/public/css/app.css
+++ b/public/css/app.css
@@ -650,6 +650,9 @@ video {
 .gap-5 {
   gap: 1.25rem;
 }
+.gap-0 {
+  gap: 0px;
+}
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -928,6 +931,9 @@ video {
 .text-yellow-800 {
   --tw-text-opacity: 1;
   color: rgb(133 77 14 / var(--tw-text-opacity, 1));
+}
+.text-inherit {
+  color: inherit;
 }
 .placeholder-gray-400::-moz-placeholder {
   --tw-placeholder-opacity: 1;
