--- a/views/layout/includes/header-app.pug
+++ b/views/layout/includes/header-app.pug
@@ -18,7 +18,7 @@ div(class="bg-indigo-700 py-5 hidden lg:block")
       a(href="/categorias/5", class="text-sm text-white uppercase font-bold") Cabañanas
 
     form(action="/buscador" method="POST" class="flex gap-3 items-center")
-      input(type="hidden" name="_csrf" value=csrfToknen)
+      input(type="hidden" name="_csrf" value=csrfToken)
 
       label(for="termino" class="text-sm uppercase font-bold text-white") Búsqueda
       input(type="text", name="termino" id="termino" placeholder="Buscar Propiedades" class="p-2 rounded-lg shadow text-sm")
