--- a/views/propiedades/mostrar.pug
+++ b/views/propiedades/mostrar.pug
@@ -54,8 +54,14 @@ block contenido
             h3(class="text-2xl text-center my-10 font-extrabold text-gray-900") Vendedor
 
             if usuario
+
+              if errores
+                div(class="max-w-md mx-auto mt-10")
+                  each error in errores
+                    p.bg-red-600.text-white.uppercase.text-xs.text-center.p-2.mb-1.font-bold= error.msg
+
               form(method="POST")
-                input(type="hidden" name="_csrf" value=csrfToken) 
+                input(type="hidden" name="_csrf" value= csrfToken) 
 
                 div(class="space-y-5")
                   label(for="mensaje") Mensaje
