--- a/views/propiedades/mostrar.pug
+++ b/views/propiedades/mostrar.pug
@@ -53,7 +53,10 @@ block contenido
           if !esVendedor
             h3(class="text-2xl text-center my-10 font-extrabold text-gray-900") Vendedor
 
-            if usuario
+            if enviado
+              p(class="p-2 text-center bg-green-500 text-green-600 uppercase font-bold") Mensaje Enviado Correctamente
+
+            else if usuario
 
               if errores
                 div(class="max-w-md mx-auto mt-10")
