--- a/public/css/app.css
+++ b/public/css/app.css
@@ -550,6 +550,10 @@ video {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -616,6 +620,15 @@ video {
 }
 .max-w-md {
   max-width: 28rem;
+}
+.max-w-5 {
+  max-width: 1.25rem;
+}
+.max-w-6 {
+  max-width: 1.5rem;
+}
+.max-w-6xl {
+  max-width: 72rem;
 }
 .flex-1 {
   flex: 1 1 0%;
