--- a/views/propiedades/mensajes.pug
+++ b/views/propiedades/mensajes.pug
@@ -5,8 +5,8 @@ block contenido
 
   a(href="/mis-propiedades", class="rounded py-2 px-10 bg-indigo-600 hover:bg-indigo-600 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto") Volver
 
-  div(class="mx-auto max-w-6xl bg-white shadow")
+  div(class="mx-auto max-w-4xl bg-white shadow")
     if mensajes.length
       p Si hay mensajes
     else
-      p(class="text-center text-gray-600") No hay mensajes
+      p(class="text-center text-gray-600 p-5") No hay mensajes
