--- a/public/css/app.css
+++ b/public/css/app.css
@@ -550,10 +550,6 @@ video {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -620,15 +616,6 @@ video {
 }
 .max-w-md {
   max-width: 28rem;
-}
-.max-w-5 {
-  max-width: 1.25rem;
-}
-.max-w-6 {
-  max-width: 1.5rem;
-}
-.max-w-6xl {
-  max-width: 72rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -712,6 +699,9 @@ video {
 }
 .border-t {
   border-top-width: 1px;
+}
+.border-b {
+  border-bottom-width: 1px;
 }
 .border-dashed {
   border-style: dashed;
