--- a/views/propiedades/mensajes.pug
+++ b/views/propiedades/mensajes.pug
@@ -5,7 +5,7 @@ block contenido
 
   a(href="/mis-propiedades", class="rounded py-2 px-10 bg-indigo-600 hover:bg-indigo-600 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto") Volver
 
-  pre= JSON.stringify(mensajes, undefined, 2)
+  //- pre= JSON.stringify(mensajes, undefined, 2)
 
   div(class="mx-auto max-w-4xl bg-white shadow")
     if mensajes.length
@@ -22,6 +22,6 @@ block contenido
               span(class="font-normal")= mensaje.mensaje
 
             p(class="font-bold text-gray-800") Enviado: 
-              span(class="font-normal")= mensaje.createdAt
+              span(class="font-normal")= formatearFecha(mensaje.createdAt)
     else
       p(class="text-center text-gray-600 p-5") No hay mensajes
