--- a/views/layout/includes/header-admin.pug
+++ b/views/layout/includes/header-admin.pug
@@ -5,6 +5,6 @@ header.bg-indigo-600.p-4
         span.font-normal Raíces
     
     nav(class="my-5 text-sm md:flex md:items-center md:gap-3 font-bold text-white hidden")
-      a(href="#" class="") Mis Propiedades
+      a(href="/mis-propiedades" class="") Mis Propiedades
       a(href="#", class="") Mi Perfil
       a(href="#", class="bg-indigo-800 py-2 px-10 rounded-lg") Cerrar Sesión
