--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -34,13 +34,11 @@ block contenido
 
                   //- p(class="text-sm text-black font-bold")=propiedad.precio.nombre
                 div(class="sm:w-1/4 md:w-2/6 lg:flex-1 flex flex-col gap-2 lg:flex-row")
-                  form(action="" method="")
-                    input(
-                      type="submit" 
-                      name="" 
-                      class=`w-full px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer ${propiedad.publicado ? 'bg-green-100 text-green-800' : 'bg-yellow-100 text-yellow-800'}` 
-                      value=`${propiedad.publicado ? 'Publicado' : 'No Publicado'}`
-                    )
+                  button(
+                    type="button"
+                    data-propiedad-id=`${propiedad.id}`
+                    class=`cambiar-estado w-full px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer ${propiedad.publicado ? 'bg-green-100 text-green-800' : 'bg-yellow-100 text-yellow-800'}`
+                  )= `${propiedad.publicado ? 'Publicado' : 'No Publicado'}`
                   
                   a(href=`/propiedades/editar/${propiedad.id}` class="px-2 py-2 md:py-1 text-xs leading-5 font-semibold rounded cursor-pointer bg-indigo-100 text-indigo-800 text-center") Editar
 
@@ -72,3 +70,6 @@ block contenido
                 a(href=`?pagina=${n}` class=`${paginaActual == n ? 'bg-indigo-50 border-indigo-500 text-indigo-600' : 'bg-white border-gray-300 text-gray-500 hover:bg-gray-50'} relative inline-flex items-center px-4 py-2 border text-sm font-medium`) #{n++}
     else
       p.text-cemter No hay propiedades aún...
+
+block scripts
+  script(src="/js/cambiarEstado.js") 
