--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -36,7 +36,7 @@ block contenido
                   a(href=`/mensajes/${propiedad.id}` class="text-sm text-gray-600")= `${propiedad.mensajes.length} Mensajes` 
 
                   //- p(class="text-sm text-black font-bold")=propiedad.precio.nombre
-                div(class="sm:w-1/4 md:w-2/6 lg:flex-1 flex flex-col gap-2 lg:flex-row")
+                div(class="sm:w-1/4 md:w-2/6 lg:w-1/6 flex flex-col gap-2 2xl:flex-row")
                   button(
                     type="button"
                     data-propiedad-id=`${propiedad.id}`
